idan's fix for the modal on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -542,3 +542,14 @@ margin-top: -250px;
 .btn-close {
 float: left; 
 }
+@media (max-width: 768px) {
+  .modal-dialog {
+    left: initial;
+    top: 0;
+    margin-top: 0;
+    width: 100%;
+  }
+  .modal-dialog h3 {
+    display: none;
+  }
+}
